ENTREGA_P3_OPCIONAL_CODIGO_INTERMEDIO/P3_OPCIONAL_MARCO_GARCIA_PABLO_ROIG/tests/invalid/23_invalid_new_argument_type.lava
record Point(int x, int y);
Point p = new Point(true, 2);
